<resources>
    <string name="app_name">Roadmap</string>
    <string name="role_category">Role based roadmaps</string>
    <string name="skill_category">Skill based roadmaps</string>

    <string name="menu_courses">Courses</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_saved_courses">Saved Courses</string>


    <string name="resources">Available resources: %d</string>
    <string name="book_api">Recommended Books</string>


    <string name="hint_note_title">Note Title</string>
    <string name="hint_note_text">Note Text</string>
    <string name="add_note">Add Note</string>
    <string name="button_save">Save</string>

    <string name="sort_by_resources">Sort by available resources</string>
    <string name="menu_saved_topics">Saved Topics</string>

    <string name="practise_quiz">Practise Quiz</string>
    <string name="marked_quiz">Marked Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="final_score">Your Final Score</string>
    <string name="score">%d / %d</string>
    <string name="ok">OK</string>
    <string name="no_quiz_yet">No Quiz yet</string>
    <string name="easy_level">Easy Level</string>
    <string name="hard_level">Hard level</string>
</resources>