<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ItemCourseActivity">

    <Button
        android:id="@+id/favourite_button"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/course_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CourseItemHeaderStyle" />

    <TextView
        android:id="@+id/course_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CourseItemDescription"/>

    <include
        layout="@layout/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/practise_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practise_quiz"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/marked_quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marked_quiz"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_quiz" />

    <TextView
        android:id="@+id/no_quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_quiz_yet"
        android:visibility="invisible"/>

</LinearLayout>