<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/button_save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_save"/>

        <EditText
            android:id="@+id/note_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_note_title"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/note_text_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/hint_note_text"
                android:inputType="text|textMultiLine"
                android:background="@null"/>

        </ScrollView>
    </LinearLayout>

</FrameLayout>